--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "baseline-browser-mapping": "^2.9.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
   }
